# notes

./: .gitignore  README.md
core_python/: 4_oop-1_classes-2.5_object_namespace.py  4_oop-1_classes-2_class_and_object_attribute_storage_way.py  4_oop-1_classes-4_function_attribute.py  4_oop-1_classes-6_properties are different from attributes.py  4_oop-1_classes-8_property_access_sequence.py  4_oop-2_polymorphism_and_special_methods-1_python_is_very_much_polymorphic_in_nature.py  4_oop-2_polymorphism_and_special_methods-3_dunder_methods_for_arithmetic_operations.py  4_oop-2_polymorphism_and_special_methods-4_objects_can_be_callable.py  4_oop-2_polymorphism_and_special_methods-5___hash__.py  4_oop-2_polymorphism_and_special_methods-7___del__.py  4_oop-2_polymorphism_and_special_methods-8___format__.py  4_oop-3_single_inheritance-2_overriding.py  4_oop-3_single_inheritance-3_extending.py  4_oop-3_single_inheritance-5_single_inheritance_18_slots.py  (+3 more)
langchain/: .gitignore  main.py  pyproject.toml
langchain/notes/: 1_langchain_overview.md  2_langchain_components.ipynb  2_langchain_components.md  3_langchain_import.ipynb  5_langchain_prompt_template.ipynb  6_structured_output.md  7_langchain_output_parser.ipynb  9_langchain_runnable_part_2.ipynb  test.json
langchain/notes/.ipynb_checkpoints/: 10_langchain_chain-checkpoint.ipynb  1_langchain_overview-checkpoint.ipynb  2_langchain_components-checkpoint.ipynb  4_langchain_models-checkpoint.ipynb  5_langchain_prompt_template-checkpoint.ipynb  6_structured_output-checkpoint.ipynb  8_langchain_runnable_part_1-checkpoint.ipynb
(+127 files in other folders)
